feat(api): add routes to get users, contributors, authors
