# config/routes.js
@@ -79,6 +79,9 @@ module.exports.routes = {
   'GET /api/v1/cavers/groups': 'v1/caver/get-groups',
   'GET /api/v1/cavers/admins': 'v1/caver/get-admins',
   'GET /api/v1/cavers/moderators': 'v1/caver/get-moderators',
+  'GET /api/v1/cavers/authors': 'v1/caver/get-authors',
+  'GET /api/v1/cavers/contributors': 'v1/caver/get-contributors',
+  'GET /api/v1/cavers/users': 'v1/caver/get-users',
   'GET /api/v1/cavers/users/count': 'v1/caver/users-count',
   'GET /api/v1/cavers/export/db': 'v1/caver/get-db-export',
   'POST /api/v1/cavers/': 'v1/caver/create',
